fixin fixin - chat user create on fill user details, filtering fixes- adding subject price